spacing issues with theme toggler fixed

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -60,6 +60,7 @@
 
 .navbar-content {
   display: flex;
+  flex-direction: column;
   width: 100%;
   align-items: center;
 }
@@ -151,6 +152,22 @@
   transform: rotate(180deg);
 }
 
+.theme-toggle-wrapper {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 1.5rem;
+}
+
+.theme-toggle-wrapper.show {
+  display: flex;
+}
+
+.theme-toggle-wrapper.hide {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .navbar {
     position: sticky;
@@ -160,6 +177,16 @@
   .navbar-toggle {
     display: none;
   }
+
+  .theme-toggle-wrapper {
+    display: flex !important;
+    justify-content: flex-end;
+    align-items: center;
+    width: auto;
+    margin-top: 0;
+    padding-left: 1rem;
+  }
+
   .navbar-menu {
     flex-direction: row;
     align-items: center;
@@ -167,6 +194,7 @@
   }
   .navbar-content {
     width: auto;
+    flex-direction: row;
   }
   .nav-list {
     display: flex;
@@ -250,14 +278,10 @@
     align-items: center;
     text-align: center;
   }
+}
 
-  .nav-list a {
-    justify-content: center;
-  }
-
-  .theme-toggle-mobile {
-    margin-top: 1rem;
-  }
+.nav-list a {
+  justify-content: center;
 }
 
 /* responsiveness */
@@ -288,19 +312,19 @@
 
 @media (min-width: 400px) and (max-width: 419px) {
   .navbar-content {
-    padding-right: 5rem;
+    padding-right: 4.8rem;
   }
 }
 
 @media (min-width: 420px) and (max-width: 439px) {
   .navbar-content {
-    padding-right: 5.5rem;
+    padding-right: 5.2rem;
   }
 }
 
 @media (min-width: 440px) and (max-width: 459px) {
   .navbar-content {
-    padding-right: 5.5rem;
+    padding-right: 5.4rem;
   }
 }
 
